--- a/package.json
+++ b/package.json
@@ -3,10 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/css": "^11.11.2",
+    "ahooks": "^3.7.10",
     "antd": "^5.15.4",
+    "antd-img-crop": "^4.21.0",
+    "escape-html": "^1.0.3",
+    "is-hotkey": "^0.2.0",
+    "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "slate": "^0.102.0",
+    "slate-history": "^0.100.0",
+    "slate-hyperscript": "^0.100.0",
+    "slate-react": "^0.102.0",
+    "styled-components": "^6.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
